@@ -1,10 +1,6 @@
 (defproject metabase/presto-driver "1.0.0-SNAPSHOT"
   :min-lein-version "2.5.0"
 
-  :jvm-opts
-  ["-XX:+IgnoreUnrecognizedVMOptions"
-   "--add-modules=java.xml.bind"]
-
   :profiles
   {:provided
    {:dependencies [[metabase-core "1.0.0-SNAPSHOT"]]}
